fixed footer issue w/icon pushing content out of container

--- a/src/styles/sass/partials/_accountInfo.scss
+++ b/src/styles/sass/partials/_accountInfo.scss
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
     width: fit-content;
-    padding: 50px;
+    margin: 0 20px;
+    padding: 15px 35px;
     background-color: $headingColour;
     color: $darkBackground;
     margin: auto;
