--- a/src/styles/sass/partials/_baseStyles.scss
+++ b/src/styles/sass/partials/_baseStyles.scss
@@ -89,7 +89,7 @@ ul {
     background-color: rgba(255, 191, 0, 0.9);
     color: $darkBackground;
     border-radius: 15px;
-    padding: 20px;
+    padding: 15px 35px;
 }
 
 .accent {
@@ -117,3 +117,4 @@ ul {
     display: flex;
     align-items: center;
 }
+
