--- a/src/styles/sass/partials/_footer.scss
+++ b/src/styles/sass/partials/_footer.scss
@@ -32,3 +32,9 @@
         flex-direction: column;
     }
 }
+
+@media(max-width: 480px) {
+    .logoCoinGecko {
+        height: 1.5rem;
+    }
+}
