--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -305,7 +305,7 @@ ul {
   background-color: rgba(255, 191, 0, 0.9);
   color: #2b2b2b;
   border-radius: 15px;
-  padding: 20px;
+  padding: 15px 35px;
 }
 
 .accent {
@@ -429,6 +429,11 @@ ul {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+@media (max-width: 480px) {
+  .logoCoinGecko {
+    height: 1.5rem;
   }
 }
 .formCard {
@@ -604,7 +609,8 @@ ul {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  padding: 50px;
+  margin: 0 20px;
+  padding: 15px 35px;
   background-color: #FFBF00;
   color: #2b2b2b;
   margin: auto;
